--- a/.github/workflows/test-appstore-api.yml
+++ b/.github/workflows/test-appstore-api.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: macos-latest
     
     steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+
       - name: 🔐 Setup App Store Connect API Key
         run: |
           mkdir -p ~/.appstoreconnect/private_keys
@@ -20,9 +23,18 @@ jobs:
         run: |
           brew install jq 2>/dev/null || true
           
-          pip3 install PyJWT cryptography
+          pip3 install --break-system-packages PyJWT cryptography
           
           echo "Using App Store Connect API to get build number..."
+          
+          # Get app version from app.json or app.config.js
+          if [ -f "app.json" ]; then
+            APP_VERSION=$(jq -r '.expo.version // "1.0.0"' app.json)
+          else
+            APP_VERSION="1.0.0"
+          fi
+          
+          echo "App version: $APP_VERSION"
           
           cat > generate_jwt.py << 'EOF'
           import jwt
@@ -60,45 +72,44 @@ jobs:
           
           echo "JWT token generated"
           
+          # Get app ID
           echo "Fetching app information..."
           APP_RESPONSE=$(curl -s --globoff -H "Authorization: Bearer $JWT" "https://api.appstoreconnect.apple.com/v1/apps?filter[bundleId]=com.letterloom.app")
-          
-          echo "App API Response:"
-          echo "$APP_RESPONSE" | jq '.'
-          
-          if echo "$APP_RESPONSE" | jq -e '.errors' > /dev/null 2>&1; then
-            echo "Error from API:"
-            echo "$APP_RESPONSE" | jq '.errors'
-            exit 1
-          fi
           
           APP_ID=$(echo "$APP_RESPONSE" | jq -r '.data[0].id // empty')
           echo "App ID: $APP_ID"
           
           if [ -z "$APP_ID" ]; then
             echo "ERROR: Could not find app in App Store Connect"
+            echo "$APP_RESPONSE" | jq '.'
             exit 1
           fi
           
-          echo "Fetching builds for app..."
-          BUILDS_RESPONSE=$(curl -s --globoff -H "Authorization: Bearer $JWT" "https://api.appstoreconnect.apple.com/v1/builds?filter[app]=$APP_ID&sort=-version&limit=5")
+          # Get preReleaseVersion ID for this app version
+          echo "Fetching preReleaseVersion for version $APP_VERSION..."
+          PRERELEASE_RESPONSE=$(curl -s --globoff -H "Authorization: Bearer $JWT" \
+            "https://api.appstoreconnect.apple.com/v1/preReleaseVersions?filter[app]=$APP_ID&filter[version]=$APP_VERSION&filter[platform]=IOS")
           
-          echo "Builds API Response:"
-          echo "$BUILDS_RESPONSE" | jq '.'
+          echo "PreRelease Version Response:"
+          echo "$PRERELEASE_RESPONSE" | jq '.'
           
-          if echo "$BUILDS_RESPONSE" | jq -e '.errors' > /dev/null 2>&1; then
-            echo "Error from API:"
-            echo "$BUILDS_RESPONSE" | jq '.errors'
-            exit 1
+          PRERELEASE_ID=$(echo "$PRERELEASE_RESPONSE" | jq -r '.data[0].id // empty')
+          echo "PreRelease Version ID: $PRERELEASE_ID"
+          
+          if [ -z "$PRERELEASE_ID" ]; then
+            echo "No builds found for version $APP_VERSION yet. Starting with build number 1."
+            LATEST_BUILD="0"
+          else
+            # Get the latest build for this preReleaseVersion
+            echo "Fetching latest build for this version..."
+            BUILDS_RESPONSE=$(curl -s --globoff -H "Authorization: Bearer $JWT" \
+              "https://api.appstoreconnect.apple.com/v1/builds?filter[preReleaseVersion]=$PRERELEASE_ID&sort=-uploadedDate&limit=1")
+            
+            echo "Builds Response:"
+            echo "$BUILDS_RESPONSE" | jq '.'
+            
+            LATEST_BUILD=$(echo "$BUILDS_RESPONSE" | jq -r '.data[0].attributes.version // "0"')
           fi
-          
-          LATEST_BUILD=$(echo "$BUILDS_RESPONSE" | jq -r '.data[0].attributes.version // "0"')
           
           echo "Latest build number: $LATEST_BUILD"
-          
-          if [ "$LATEST_BUILD" = "0" ] || [ "$LATEST_BUILD" = "null" ]; then
-            echo "ERROR: Could not determine latest build number"
-            exit 1
-          fi
-          
           echo "latest=$LATEST_BUILD" >> $GITHUB_OUTPUT
