--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -292,12 +292,14 @@ jobs:
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-node-v2-${{ hashFiles('package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-node-v2-
 
       - name: 📦 Install dependencies
-        run: npm ci
+        run: |
+          rm -rf node_modules/expo-game-center
+          npm ci
 
       - name: 🎯 Determine Build Type
         id: build_type
