--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -292,14 +292,15 @@ jobs:
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-v2-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-node-v3-${{ hashFiles('package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-v2-
+            ${{ runner.os }}-node-v3-
 
       - name: 📦 Install dependencies
         run: |
           rm -rf node_modules/expo-game-center
           npm ci
+          npm update expo-game-center --no-save
 
       - name: 🎯 Determine Build Type
         id: build_type
