fix: Force fresh install of expo-game-center from git branch
- Remove cached expo-game-center after npm ci
- Explicitly install from github:deanandreakis/expo-game-center#fix/promise-resolution-v2
- Add verification step to ensure correct installation

--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -298,9 +298,11 @@ jobs:
 
       - name: 📦 Install dependencies
         run: |
-          rm -rf node_modules/expo-game-center
           npm ci
-          npm update expo-game-center --no-save
+          rm -rf node_modules/expo-game-center
+          npm install github:deanandreakis/expo-game-center#fix/promise-resolution-v2 --no-save
+          echo "Verifying expo-game-center installation..."
+          ls -la node_modules/expo-game-center/ios/ | grep -i expo || echo "ERROR: expo-game-center not installed correctly"
 
       - name: 🎯 Determine Build Type
         id: build_type
