fix: Use expo-game-center fork with proper configuration
- Remove expo-game-center from plugins (fork doesn't support plugin system properly)
- Revert to using deanandreakis/expo-game-center#fix/promise-resolution-v2 fork
- Restore timeout wrappers in gamecenter.ts service for fork-specific hanging issues
- Add module availability checks in App.tsx authentication flow
- Update GitHub Actions to properly install and verify fork

This approach uses the fork with known working authentication behavior
while avoiding the plugin system errors with stable expo-game-center library.

--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -299,15 +299,24 @@ jobs:
       - name: 📦 Install dependencies
         run: |
           npm ci
-          echo "Dependencies installed successfully"
-          echo "expo-game-center will be handled by plugin system"
+          rm -rf node_modules/expo-game-center
+          npm install github:deanandreakis/expo-game-center#fix/promise-resolution-v2 --no-save
+          echo "Verifying expo-game-center installation..."
+          ls -la node_modules/expo-game-center/ios/ | grep -i expo || echo "ERROR: expo-game-center not installed correctly"
 
       - name: 🔍 Verify expo-game-center Plugin
         run: |
-          echo "Checking expo-game-center plugin status..."
-          npx expo prebuild --platform ios --dry-run 2>&1 | grep -i gamecenter || echo "GameCenter plugin not found in prebuild"
-          echo "Checking final configuration..."
-          npx expo config --type ios | grep -A 5 -B 5 gamecenter || echo "No GameCenter configuration found"
+          echo "Checking expo-game-center fork installation..."
+          if [ -d "node_modules/expo-game-center" ]; then
+            echo "✅ expo-game-center directory found"
+            ls -la node_modules/expo-game-center/
+            echo "Looking for app.plugin.js..."
+            find node_modules/expo-game-center -name "app.plugin.js" -type f
+            echo "Checking package.json for plugin main..."
+            cat node_modules/expo-game-center/package.json | grep -A 5 -B 5 '"main"' || echo "No main field found"
+          else
+            echo "❌ expo-game-center not installed"
+          fi
 
       - name: 🎯 Determine Build Type
         id: build_type
