--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "expo-constants": "~18.0.12",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
-    "expo-game-center": "^1.0.1",
+    "expo-game-center": "github:deanandreakis/expo-game-center#fix/promise-resolution-v2",
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-secure-store": "~15.0.8",
